--- a/app/src/main/res/layout/activity_aes.xml
+++ b/app/src/main/res/layout/activity_aes.xml
@@ -6,15 +6,29 @@
     android:layout_height="match_parent"
     tools:context="john.cipher.AES">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="288dp"
-        android:layout_height="205dp"
-        android:text="TextView"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintVertical_bias="0.092" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:weightSum="1"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="2dp">
+
+        <TextView
+            android:id="@+id/encryptedText"
+            android:layout_width="match_parent"
+            android:layout_height="205dp"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/key"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/encryptedText"
+            android:text="TextView"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+
 </android.support.constraint.ConstraintLayout>
