--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,13 @@
         android:layout_gravity="center"
         android:weightSum="1">
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="Enter you message here : " />
+
         <EditText
             android:id="@+id/editText"
             android:layout_width="wrap_content"
@@ -46,6 +53,13 @@
             android:paddingRight="16dp"
             android:onClick="decode"
             android:text="Decode" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="Enter your Key here : " />
 
         <EditText
             android:id="@+id/keyText"
