--- a/app/src/main/res/menu/menu_add_key.xml
+++ b/app/src/main/res/menu/menu_add_key.xml
@@ -4,5 +4,6 @@
     <item android:id="@+id/new_key"
         android:title="@string/new_key"
         android:icon="@drawable/ic_add_key"
-        app:showAsAction= "always" />
+        app:showAsAction= "always"
+        android:onClick="addKey"/>
 </menu>
