--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,8 @@
         android:title="About AES" />
     <item android:id="@+id/keys"
         android:title="My Keys" />
+    <item android:id="@+id/add_key"
+        android:title="@string/new_key"
+        android:icon="@drawable/ic_add_key"
+        app:showAsAction= "always"/>
 </menu>
